+ cr fix