@@ -5,6 +5,7 @@ import enums.ProductType;
 import model.Product;
 
 import java.math.BigDecimal;
+import java.util.Collections;
 import java.util.List;
 
 public class Storage {
@@ -14,7 +15,7 @@ public class Storage {
                         List.of(ProductFeatures.RAM, ProductFeatures.PROCESSOR)),
                 new Product(2, "iPhone", new BigDecimal("2999.99"), 10, ProductType.SMARTPHONE,
                         List.of(ProductFeatures.COLOR, ProductFeatures.ADDITIONALACCRESSORIES, ProductFeatures.BATTERYCAPACITY)),
-                new Product(3, "Airpods", new BigDecimal("599.99"), 10, ProductType.ELECTRONICS, List.of())
+                new Product(3, "Airpods", new BigDecimal("599.99"), 10, ProductType.ELECTRONICS, Collections.emptyList())
         );
     }
 }
